# gamelibrary

./: Cargo.toml
example_animation/: animation_meta.json
src/: animation.rs  animation_loader.rs  arenaiter.rs  collider.rs  font_loader.rs  lib.rs  menu.rs  rigid_body.rs  sound_manager.rs  space.rs  swapiter.rs  sync_arena.rs  sync_vector.rs  syncsound.rs  texture_loader.rs  time.rs  timeline.rs  traits.rs
src/proxies/macroquad/: color.rs
src/proxies/macroquad/math/: vec2.rs
src/sound/: mod.rs  soundmanager.rs
src/sound/backends/: ears.rs  macroquad.rs  mod.rs
src/soundtest/: main.rs
src/sync/: client.rs  server.rs
src/test/: main.rs
