[package]
name = "gamelibrary"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcode = { version = "0.6.3", features = ["serde"] }
chrono = "0.4.38"
diff-struct = "0.5.3"
ewebsock = "0.7.0"
fxhash = "0.2.1"
lz4_flex = "0.11.3"
macroquad = {git = "https://github.com/VoxanyNet/macroquad", rev = "73db4a93f90f41942995ef757499ed61f3ff6085"}
nalgebra = {git = "https://github.com/VoxanyNet/nalgebra", rev = "c57d898ac19a01ac5ad2d6da5f98dea91257ac9e"}
rand = "0.8.5"
rapier2d = { git = "https://github.com/VoxanyNet/rapier", rev = "774d31b66aa1a26760ab35d1c977a09af03c7ecf", features = ["serde-serialize"] }
#rapier2d = {path = "../rapier/crates/rapier2d", features = ["serde-serialize"]}
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
tungstenite = "0.23.0"
uuid = { version = "1.8.0", features = ["v4"] }
getrandom = { version = "0.2.15", features = ["js"] }
web-sys = { version = "0.3.72", features = ["WebSocket", "console"] }
wasm-bindgen-futures = "0.4.45"
ears = "0.8.0"
futures = "0.3.31"


[[bin]]
name = "test"
path = "src/test/main.rs"
